# syntra_ds_examen

./: .gitignore  CLAUDE.md  README.md  environment.yml  plan.md  pyproject.toml  requirements.txt  specs.md
notebooks/: opgave.ipynb
src/syntradsexamen/: config.py  styling.py
